syntax = "proto3";

package order;

option php_namespace = "GRPC\\order";
option php_metadata_namespace = "GRPC\\order\\GPBMetadata";


service OrderGrpc {
    rpc OrderCreate (orderCreateRequest) returns (orderCreateResponse);
    rpc OrderUpdate (orderUpdateRequest) returns (orderUpdateResponse);
    rpc OrderList (orderListRequest) returns (orderListResponse);
    //        rpc OrderDelete (orderDeleteRequest) returns (orderDeleteResponse);
}

message orderCreateRequest {
    int32 user_id = 1;
}

message orderCreateResponse {
    int32 user_id = 1;
    string status = 2;
    string total_price = 3;
}

message orderUpdateRequest {
    int32 order_id = 1;
    string status = 2;
}

message orderUpdateResponse {
    string message = 1;
}

message orderListRequest {
    int32 user_id = 1;
}

message orderListResponse {
    repeated OrderItem order_items = 1;
}

message OrderItem {
    int32 order_id = 1;
    int32 user_id = 2;
    int32 product_price_id = 3;
    string price = 4;
    string status = 5;
    string order_time = 6;
}

//message orderDeleteRequest {
//    string message = 1;
//}

//message orderDeleteResponse {
//    string message = 1;
//}
